--- a/index.html
+++ b/index.html
@@ -7,25 +7,14 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Foodee &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>The Lean Snack</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="The Lean Snack, is a healthy snack company dedicated to providing truly delicious healthy snacking options for everyone, irrespctive of the fact that you are watchin your diet, or a busy person wanting to have something on the go or just to keep our tummies happy between meals.  " />
+	<meta name="keywords" content="The Lean Snack, healthy snack, healthy, diet, snacks, lean food, fitness" />
+	<meta name="author" content="The Lean Snack" />
 
   <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+	
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -319,11 +308,11 @@
 						<ul class="fh5co-contact-info">
 							<li class="fh5co-contact-address ">
 								<i class="icon-home"></i>
-								5555 Love Paradise 56 New Clity 5655, <br>Excel Tower United Kingdom
+								A-305, UKN Belvista, Hagadur Main Road, Whitefield, Bangalore, 560066
 							</li>
-							<li><i class="icon-phone"></i> (123) 465-6789</li>
-							<li><i class="icon-envelope"></i>info@freehtml5.co</li>
-							<li><i class="icon-globe"></i> <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></li>
+							<li><i class="icon-phone"></i> +91 8698076603</li>
+							<li><i class="icon-envelope"></i>rahuloutthere@gmail.com</li>
+							<li><i class="icon-globe"></i> <a href="theleansnack.com" target="_blank"></a></li>
 						</ul>
 					</div>
 					<div class="col-md-6 to-animate-2">
@@ -371,15 +360,14 @@
 		<div class="container">
 			<div class="row row-padded">
 				<div class="col-md-12 text-center">
-					<p class="to-animate">&copy; 2016 Foodee Free HTML5 Template. <br> Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://pexels.com/" target="_blank">Pexels</a> <br> Tasty Icons Free <a href="http://handdrawngoods.com/store/tasty-icons-free-food-icons/" target="_blank">handdrawngoods</a>
-					</p>
+					<p class="to-animate">&copy; The Lean Snack 2017 <br> </p>
 					<p class="text-center to-animate"><a href="#" class="js-gotop">Go To Top</a></p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<ul class="fh5co-social">
-						<li class="to-animate-2"><a href="#"><i class="icon-facebook"></i></a></li>
+						<li class="to-animate-2"><a href="https://www.facebook.com/theleansnack/"><i class="icon-facebook"></i></a></li>
 						<li class="to-animate-2"><a href="#"><i class="icon-twitter"></i></a></li>
 						<li class="to-animate-2"><a href="#"><i class="icon-instagram"></i></a></li>
 					</ul>
