--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 					<ul class="fh5co-social">
 						<li class="to-animate-2"><a href="https://www.facebook.com/theleansnack/"><i class="icon-facebook"></i></a></li>
 						<li class="to-animate-2"><a href="#"><i class="icon-twitter"></i></a></li>
-						<li class="to-animate-2"><a href="#"><i class="icon-instagram"></i></a></li>
+						<li class="to-animate-2"><a href="https://www.instagram.com/theleansnack/"><i class="icon-instagram"></i></a></li>
 					</ul>
 				</div>
 			</div>
