--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
 			<div class="fh5co-2col fh5co-bg to-animate-2" style="background-image: url(images/res_img_1.jpg)"></div>
 			<div class="fh5co-2col fh5co-text">
 				<h2 class="heading to-animate">About Us</h2>
-				<p class="to-animate"><span class="firstcharacter">F</span>ar far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+				<p class="to-animate"><span class="firstcharacter">T</span>he Lean Snack was born out of the need for healthy snacking options in our country. Snacking is an important part of our diet to keep us sane between meals and especially when the late night hunger pangs hit. Most of us really do not keep track of the snacks we eat, because, well its just too much work. Our stores are filled with a myriad options, but none healthy. 
+
+At Lean Snack, we decided to provide truly delicious healthy snacking options for everyone, irrespctive of the fact that you are watchin your diet, or a busy person wanting to have something on the go or just to keep our tummies happy between meals.
+</p>
 				<p class="text-center to-animate"><a href="#" class="btn btn-primary btn-outline">Get in touch</a></p>
 			</div>
 		</div>
