--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>The Lean Snack</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="The Lean Snack, is a healthy snack company dedicated to providing truly delicious healthy snacking options for everyone, irrespctive of the fact that you are watchin your diet, or a busy person wanting to have something on the go or just to keep our tummies happy between meals.  " />
+	<meta name="description" content="The Lean Snack, is a healthy snack company dedicated to providing
+					   " />
 	<meta name="keywords" content="The Lean Snack, healthy snack, healthy, diet, snacks, lean food, fitness" />
 	<meta name="author" content="The Lean Snack" />
 
@@ -68,7 +69,7 @@
 					<div class="container">
 						<div class="row">
 							<h1 class="to-animate">The Lean Snack</h1>
-							<h2 class="to-animate"> Munch better  &nbsp <a href="http://freehtml5.co/" target="_blank"> &#9829;  </a></h2>
+							<h2 class="to-animate"> Munch better  &nbsp <a href="" target="_blank"> &#9829;  </a></h2>
 						</div>
 					</div>
 				</div>
@@ -107,10 +108,13 @@
 			<div class="fh5co-2col fh5co-bg to-animate-2" style="background-image: url(images/res_img_1.jpg)"></div>
 			<div class="fh5co-2col fh5co-text">
 				<h2 class="heading to-animate">About Us</h2>
-				<p class="to-animate"><span class="firstcharacter">T</span>he Lean Snack was born out of the need for healthy snacking options in our country. Snacking is an important part of our diet to keep us sane between meals and especially when the late night hunger pangs hit. Most of us really do not keep track of the snacks we eat, because, well its just too much work. Our stores are filled with a myriad options, but none healthy. 
-
-At Lean Snack, we decided to provide truly delicious healthy snacking options for everyone, irrespctive of the fact that you are watchin your diet, or a busy person wanting to have something on the go or just to keep our tummies happy between meals.
-</p>
+				<p class="to-animate"><span class="firstcharacter">T</span>he Lean Snack was born out of the need for healthy 
+					snacking options in our country. Snacking is an important part of our diet to keep us sane between meals 
+					and especially when the late night hunger pangs hit. Most of us really do not keep track of the snacks we eat, 
+					because, well its just too much work. Our stores are filled with a myriad options, but none healthy. 
+					At Lean Snack, we decided to provide truly delicious healthy snacking options for everyone, irrespctive of 
+					the fact that you are watchin your
+					diet, or a busy person wanting to have something on the go or just to keep our tummies happy between meals.</p>
 				<p class="text-center to-animate"><a href="#" class="btn btn-primary btn-outline">Get in touch</a></p>
 			</div>
 		</div>
