--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
 			<div class="container">
 				<div class="row text-center fh5co-heading row-padded">
 					<div class="col-md-8 col-md-offset-2">
-						<h2 class="heading to-animate">Reserve a Table</h2>
-						<p class="sub-heading to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<h2 class="heading to-animate">Contact Us</h2>
+						<p class="sub-heading to-animate"></p>
 					</div>
 				</div>
 				<div class="row">
@@ -323,7 +323,7 @@
 						</ul>
 					</div>
 					<div class="col-md-6 to-animate-2">
-						<h3>Reservation Form</h3>
+						<h3> Message Us </h3>
 						<div class="form-group ">
 							<label for="name" class="sr-only">Name</label>
 							<input id="name" class="form-control" placeholder="Name" type="text">
