--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 						<div class="fh5co-v-half to-animate-2">
 							<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_11.jpg)"></div>
 							<div class="fh5co-v-col-2 fh5co-text fh5co-special-1 arrow-left">
-								<h2>Fresh Mushrooms</h2>
-								<span class="pricing">$7.50</span>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<h2>Cranberry Delight</h2>
+								<span class="pricing">80</span>
+								<p>The goodness of oats and nuts married to fresh cranberries.</p>
 							</div>
 						</div>
 						<div class="fh5co-v-half">
