--- a/index.html
+++ b/index.html
@@ -180,17 +180,17 @@
 							<div class="fh5co-h-row-2 to-animate-2">
 								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_2.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-left">
-									<h2>Grilled Chiken Salad</h2>
-									<span class="pricing">$12.00</span>
-									<p>Far far away, behind the word mountains.</p>
+									<h2>Strawberry Sizzle</h2>
+									<span class="pricing">80</span>
+									<p>Juicy strawberries baked with oats and nuts make for a delightful snack.</p>
 								</div>
 							</div>
 							<div class="fh5co-h-row-2 fh5co-reversed to-animate-2">
 								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_8.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-right">
-									<h2>Cheese and Garlic Toast</h2>
-									<span class="pricing">$4.50</span>
-									<p>Far far away, behind the word mountains.</p>
+									<h2>GM Bar</h2>
+									<span class="pricing">80</span>
+									<p>The lip smacking taste of mango when mixed with ginger is an absolute must try.</p>
 								</div>
 							</div>
 						</div>
@@ -199,17 +199,17 @@
 							<div class="fh5co-h-row-2 fh5co-reversed to-animate-2">
 								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_7.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-right">
-									<h2>Organic Egg</h2>
-									<span class="pricing">$4.99</span>
-									<p>Far far away, behind the word mountains.</p>
+									<h2>Strawberry Special</h2>
+									<span class="pricing">80</span>
+									<p>We made it special by adding chocolate and lots of love.</p>
 								</div>
 							</div>
 							<div class="fh5co-h-row-2 to-animate-2">
 								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_6.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-left">
-									<h2>Salad with Crispy Chicken</h2>
-									<span class="pricing">$8.50</span>
-									<p>Far far away, behind the word mountains.</p>
+									<h2>Choco chip Cookie</h2>
+									<span class="pricing">20</span>
+									<p>Our classic oat choco chip cookie does not need a description.</p>
 								</div>
 							</div>
 						</div>
