--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 							<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_11.jpg)"></div>
 							<div class="fh5co-v-col-2 fh5co-text fh5co-special-1 arrow-left">
 								<h2>Cranberry Delight</h2>
-								<span class="pricing">80</span>
-								<p>The goodness of oats and nuts married to fresh cranberries.</p>
+								<span class="pricing">Rs. 80</span>
+								<p>The goodness of oats and nuts mixed, layered and baked with fresh cranberries.</p>
 							</div>
 						</div>
 						<div class="fh5co-v-half">
@@ -181,7 +181,7 @@
 								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_2.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-left">
 									<h2>Strawberry Sizzle</h2>
-									<span class="pricing">80</span>
+									<span class="pricing">Rs. 80</span>
 									<p>Juicy strawberries baked with oats and nuts make for a delightful snack.</p>
 								</div>
 							</div>
@@ -189,7 +189,7 @@
 								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_8.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-right">
 									<h2>GM Bar</h2>
-									<span class="pricing">80</span>
+									<span class="pricing">Rs. 80</span>
 									<p>The lip smacking taste of mango when mixed with ginger is an absolute must try.</p>
 								</div>
 							</div>
@@ -200,7 +200,7 @@
 								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_7.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-right">
 									<h2>Strawberry Special</h2>
-									<span class="pricing">80</span>
+									<span class="pricing">Rs. 80</span>
 									<p>We made it special by adding chocolate and lots of love.</p>
 								</div>
 							</div>
@@ -208,7 +208,7 @@
 								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_6.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-left">
 									<h2>Choco chip Cookie</h2>
-									<span class="pricing">20</span>
+									<span class="pricing">Rs. 20</span>
 									<p>Our classic oat choco chip cookie does not need a description.</p>
 								</div>
 							</div>
@@ -216,9 +216,9 @@
 						<div class="fh5co-v-half to-animate-2">
 							<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_3.jpg)"></div>
 							<div class="fh5co-v-col-2 fh5co-text fh5co-special-1 arrow-left">
-								<h2>Tomato Soup with Chicken</h2>
-								<span class="pricing">$12.99</span>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<h2>Peanut Butter Cookie</h2>
+								<span class="pricing">Rs. 20</span>
+								<p>We really wish they shall have peanut butter when we move to Mars.</p>
 							</div>
 						</div>
 
