--- a/index.html
+++ b/index.html
@@ -234,26 +234,26 @@
 				<div class="row">
 					<div class="col-md-3 to-animate">
 						<div class="fh5co-type">
-							<h3 class="with-icon icon-1">Fruits</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3 class="with-icon icon-1">Dried Fruits</h3>
+							<p>Dired fruits make for a great tasty snack. Just open and nibble a handful of strawberries or mango or blueberry.</p>
 						</div>
 					</div>
 					<div class="col-md-3 to-animate">
 						<div class="fh5co-type">
-							<h3 class="with-icon icon-2">Sea food</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3 class="with-icon icon-2">Nutrition Bar</h3>
+							<p>Our range of nutrition bars are made to keep those hunger pangs at bay anytime of the day. And hey, they keep you fit too.</p>
 						</div>
 					</div>
 					<div class="col-md-3 to-animate">
 						<div class="fh5co-type">
-							<h3 class="with-icon icon-3">Vegetables</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3 class="with-icon icon-3">Cookies</h3>
+							<p>With chai or coffee or just pick one and indulge in. Zero regret and great taste is how we describe our oat and quinoa cookies.</p>
 						</div>
 					</div>
 					<div class="col-md-3 to-animate">
 						<div class="fh5co-type">
-							<h3 class="with-icon icon-4">Meat</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3 class="with-icon icon-4">Breakfast</h3>
+							<p>You wouldnt think we forgot about the most important meal of the day, did you? Just open up our morning packs filled with quinoa flakes, almonds and dried fruits with some hot milk. Just wow.</p>
 						</div>
 					</div>
 				</div>
@@ -268,7 +268,7 @@
 				<div class="row text-center fh5co-heading row-padded">
 					<div class="col-md-8 col-md-offset-2 to-animate">
 						<h2 class="heading">Upcoming Events</h2>
-						<p class="sub-heading">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<p class="sub-heading">Diet is 75% of your body. We aim for the 100. Tune in to checkout some fun events</p>
 					</div>
 				</div>
 				<div class="row">
@@ -276,23 +276,23 @@
 						<div class="fh5co-event to-animate-2">
 							<h3>Kitchen Workshops</h3>
 							<span class="fh5co-event-meta">March 19th, 2016</span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>We care, so we share. WHy don't you drop by our kitchen and made discover somthing together.</p>
 							<p><a href="#" class="btn btn-primary btn-outline">Read More</a></p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="fh5co-event to-animate-2">
-							<h3>Music Concerts</h3>
+							<h3>Calburn Series</h3>
 							<span class="fh5co-event-meta">March 19th, 2016</span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>Our Calburn series of events are designed to help you burn calories while having so much fun. Oh, so much fun.</p>
 							<p><a href="#" class="btn btn-primary btn-outline">Read More</a></p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="fh5co-event to-animate-2">
-							<h3>Free to Eat Party</h3>
+							<h3>Contests</h3>
 							<span class="fh5co-event-meta">March 19th, 2016</span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>It is good to spice it up once in a while, don't you think? Keep in touch to know about our exciting contests with even exciting gifts.</p>
 							<p><a href="#" class="btn btn-primary btn-outline">Read More</a></p>
 						</div>
 					</div>
