--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 				<div class="row text-center fh5co-heading row-padded">
 					<div class="col-md-8 col-md-offset-2">
 						<h2 class="heading to-animate">Featured Dishes</h2>
-						<p class="sub-heading to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<p class="sub-heading to-animate">Scroll down to see our many ways to keeo you fitter and fuller.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -235,7 +235,7 @@
 					<div class="col-md-3 to-animate">
 						<div class="fh5co-type">
 							<h3 class="with-icon icon-1">Dried Fruits</h3>
-							<p>Dired fruits make for a great tasty snack. Just open and nibble a handful of strawberries or mango or blueberry.</p>
+							<p>Dried fruits make for a great tasty snack. Just open and nibble a handful of strawberries or mango or blueberry.</p>
 						</div>
 					</div>
 					<div class="col-md-3 to-animate">
@@ -292,7 +292,7 @@
 						<div class="fh5co-event to-animate-2">
 							<h3>Contests</h3>
 							<span class="fh5co-event-meta">March 19th, 2016</span>
-							<p>It is good to spice it up once in a while, don't you think? Keep in touch to know about our exciting contests with even exciting gifts.</p>
+							<p>It is good to spice it up once in a while, don't you think? Check here for contests and exciting gifts.</p>
 							<p><a href="#" class="btn btn-primary btn-outline">Read More</a></p>
 						</div>
 					</div>
