much better replacement

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<div class="container">
 						<div class="row">
 							<h1 class="to-animate">The Lean Snack</h1>
-							<h2 class="to-animate"> Munch better  &nbsp <a href="" target="_blank"> &#9829;  </a></h2>
+							<h2 class="to-animate"> Snack like a pro  &nbsp <a href="" target="_blank"> &#9829;  </a></h2>
 						</div>
 					</div>
 				</div>
