spell mistake under featured dishes

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 				<div class="row text-center fh5co-heading row-padded">
 					<div class="col-md-8 col-md-offset-2">
 						<h2 class="heading to-animate">Featured Dishes</h2>
-						<p class="sub-heading to-animate">Scroll down to see our many ways to keeo you fitter and fuller.</p>
+						<p class="sub-heading to-animate">Scroll down to see our many ways to keep you fitter and fuller.</p>
 					</div>
 				</div>
 				<div class="row">
